<resources>

    <!-- Preference Keys -->
    <string name="pref_position_key">position</string>
    <string name="pref_is_shown_on_lock_key">is_shown_on_lock</string>
    <string name="pref_country_code_key">country_code_key</string>


    <string name="pref_is_shown_on_lock_label">Display Player Controls on Lock Screen</string>
    <string name="pref_is_shown_on_lock_yes_label">Yes</string>
    <string name="pref_is_shown_on_lock_no_label">No</string>
    <string name="pref_is_shown_on_lock_value_no">no</string>
    <string name="pref_is_shown_on_lock_value_yes">yes</string>

    <string name="pref_country_code_label">Country Code</string>
    <string name="pref_country_code_default">us</string>

    <string name="app_name">Music Previewer</string>
    <string name="action_settings">Settings</string>
    <string name="action_now_playing">Now Playing</string>
    <string name="action_share">Share</string>

    <string name="title_settings">Settings</string>
    <string name="title_track_list">Top 10 Tracks</string>

    <string name="hint_search">Enter artist name</string>
    <string name="btn_search">></string>

    <string name="lbl_time_start">0:00</string>
    <string name="notification_playing">Playing %1$s</string>

    <string name="toast_no_artists">No artists found. Please refine search.</string>
    <string name="toast_no_tracks">No tracks found for this artist.</string>
    <string name="toast_artist_required">Please enter an artist.</string>
</resources>
