<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_country_code_label"
        android:key="@string/pref_country_code_key"
        android:defaultValue="@string/pref_country_code_default"
        android:inputType="textCapCharacters"
        android:singleLine="true" />

    <ListPreference
        android:title="@string/pref_is_shown_on_lock_label"
        android:key="@string/pref_is_shown_on_lock_key"
        android:defaultValue="@string/pref_is_shown_on_lock_value_yes"
        android:entryValues="@array/pref_is_shown_on_lock_values"
        android:entries="@array/pref_is_shown_on_lock_options" />

</PreferenceScreen>
